# thedush_ros

./: README.md
meshes/robot_case/: humanoid.STL  skid_case.STL
meshes/sensors/: IMU.STL
meshes/wheels/: mecanumwheel.STL  track_wheel.STL
thedush_control/thedush_diff_control/: CMakeLists.txt  package.xml
thedush_gazebo/: CMakeLists.txt  package.xml
thedush_gazebo/launch/: cleanbot.launch  diff_wheeled_gazebo.launch  humanoid_gazebo.launch  kiwi_wheeled_gazebo.launch  mecanum_suspension_wheeled_gazebo.launch  skid_suspension_wheeled_gazebo.launch  skid_wheeled_gazebo.launch
thedush_robots/: CMakeLists.txt  package.xml  read.txt  urdf.rviz
thedush_robots/cleanbot/: base.STL  kinect.STL  wheel.STL
thedush_robots/launch/: cleanbot.launch  humanoid.launch  kiwi.launch  mecanum.launch  skid.launch  skid_suspension.launch
thedush_robots/urdf/: cleanbot.urdf  humanoid_robot.urdf  kiwi_robot.urdf  mecanum_wheeled_robot.urdf  skid_suspension_wheeled_robot.urdf  skid_wheeled_robot.urdf
thedush_sensor_sim_gazebo/: CMakeLists.txt  package.xml
thedush_sensors/: CMakeLists.txt  package.xml
