<?xml version="1.0"?>
<package>
  <name>thedush_sensors</name>
  <version>1.1.2</version>
  <description>Thedush standard sensors description. URDF and meshses.</description>
  <license>BSD</license>

  <author email="navaneeth@thedush.com">Roberto Guzmán</author>
  <author email="navaneeth@thedush.com">Román Navarro</author>
  
  <buildtool_depend>catkin</buildtool_depend>
    
  <maintainer email="navaneeth@thedush.com">Angel Soriano</maintainer>
  

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  
</package>
